crates/diffler/src/ui/snapshots/diffler__ui__status__tests__status_screen_shows_ci_rollup_glyphs_on_commit_and_branch_rows.snap
---
source: crates/diffler/src/ui/status.rs
expression: render(&mut app).backend()
---
" c commit · b branch · s stage · x discard · ? help                                                                     "
" Head:     main c1ac28f initial commit                                                                                  "
" Changes   +3 -1  █████                                                                                                 "
"                                                                                                                        "
"▌▾ Untracked (1) +1 -0                                                                                                  "
" ○ todo.md +1 -0                                                                                                        "
"                                                                                                                        "
" ▾ Unstaged changes (1) +1 -1                                                                                           "
" ● src/lib.rs +1 -1                                                                                                     "
"                                                                                                                        "
" ▾ Staged changes (1) +1 -0                                                                                             "
" + ci.yml +1 -0                                                                                                         "
"                                                                                                                        "
" ▾ Recent commits (1)                                                                                                   "
" ✓   c1ac28f initial commit                                                                                    test  1h "
"                                                                                                                        "
" Repo      ─────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"                                                                                                                        "
" ▸ Open pull requests                                                                                                   "
"                                                                                                                        "
" ▾ Branches (1)                                                                                                         "
" × * main                                                                                                            1h "
"                                                                                                                        "
" ▸ CI runs (3)                                                                                                          "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" STATUS  fixture@main · mcp off · 3 files, 0 viewed                                                                     "
