crates/diffler/src/ui/snapshots/diffler__ui__status__tests__the_diff_transient_picks_a_branch_to_review_against.snap
---
source: crates/diffler/src/ui/status.rs
expression: render(&mut app).backend()
---
" Hint: c commit  b branch  s stage  x discard  ? help                                                                   "
" Head:     feature 26e25b5 feature work                                                                                 "
" Changes   +1 -0  █████                                                                                                 "
"                                                                                                                        "
" ▾ Untracked (1) +1 -0                                                                                                  "
" ? dirty.rs +1 -0                                                                                                       "
"                                                                                                                        "
" ▸ Recent commits (2)                                                                                                   "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                ╭ Diff against branch ────────────────────────────────╮                                 "
"                                │ >                                                   │                                 "
"                                │ feature                                             │                                 "
"                                │ main                                                │                                 "
"                                │ enter review · j/k move · tab filter · q close      │                                 "
"                                ╰─────────────────────────────────────────────────────╯                                 "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" STATUS  fixture@feature  mcp off  1 file, 0 viewed                                                                     "
